<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_start_join_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guessit.guessit.MainActivity">

    <Button
        android:text="Start a game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startgame"
        android:layout_marginTop="153dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/joingame"
        android:layout_alignStart="@+id/joingame"
        android:width="300dp"
        android:onClick="startGame"/>

    <Button
        android:text="Join a game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/joingame"
        android:layout_marginTop="14dp"
        android:width="300dp"
        android:layout_below="@+id/startgame"
        android:layout_centerHorizontal="true"
        android:onClick="joinGame"/>


</RelativeLayout>