<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_faction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guessit.guessit.ChooseFaction">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select a Faction"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textSize="36dp"/>
    <Button
        android:text="Humans"
        android:layout_width="208dp"
        android:id="@+id/button5"
        android:layout_centerInParent="false"
        android:elevation="7dp"
        android:layout_height="100dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:onClick="humanFaction"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="Monsters"
        android:layout_width="208dp"
        android:id="@+id/button4"
        android:layout_centerInParent="false"
        android:elevation="6dp"
        android:layout_height="100dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="monsterFaction"
        android:layout_marginBottom="82dp"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>