...
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Round Winner: "
        android:id="@+id/roundWinnerText"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/finishResultButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Next Round"
        android:layout_width="200dp"
...

    <Button
        android:text="Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/scoreResultButton"
        android:layout_below="@+id/resultImg1"
        android:layout_alignRight="@+id/resultImg1"
        android:layout_alignEnd="@+id/resultImg1" />

    <Button
        android:text="exit"
...
