...
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp">

        <Button
            android:id="@+id/viewScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="Score"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
...
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:onClick="humanFaction"
            android:layout_marginBottom="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4" />

        <Button
            android:text="Monsters"
            android:layout_width="208dp"
            android:id="@+id/button4"
...
